--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -39,11 +39,11 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-configure-node-js-console-font/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to configure node.js console font ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-configure-node-js-console-font/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to configure node.js console font?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-read-command-line-arguments-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to read command line arguments in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-read-command-line-arguments-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to read command-line arguments in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
@@ -55,51 +55,51 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-serve-static-content-using-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Serve Static Content using Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-serve-static-content-using-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Serve Static Content using Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-setup-handlebars-view-engine-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Setup Handlebars View Engine in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-setup-handlebars-view-engine-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Setup Handlebars View Engine in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-run-synchronous-queries-using-sync-sql-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Run Synchronous Queries using sync-sql Module in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-run-synchronous-queries-using-sync-sql-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Run Synchronous Queries using sync-sql Module in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-setup-view-engine-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Setup View Engine in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-setup-view-engine-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Setup View Engine in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-set-online-sql-server-for-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Set Online SQL Server for Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-set-online-sql-server-for-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Set Online SQL Server for Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-validate-data-using-hapi-joi-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Validate Data using hapi/joi Module in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-validate-data-using-hapi-joi-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Validate Data using hapi-joi Module in Node.js?</a>
                       </div>
                       
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-integrate-stripe-payment-gateway-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Integrate Stripe Payment Gateway in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-integrate-stripe-payment-gateway-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Integrate Stripe Payment Gateway in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-send-email-using-mailgun-api-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Send Email using Mailgun API in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-send-email-using-mailgun-api-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Send Email using Mailgun API in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-request-module/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to use Request Module in Node.js</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-request-module/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to use the Request Module in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-validate-data-using-validator-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Validate Data using validator Module in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-validate-data-using-validator-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Validate Data using validator Module in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-upload-file-using-formidable-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Upload File using formidable module in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-upload-file-using-formidable-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to upload files using the formidable module in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-yargs-module/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to use Yargs Module in Node.js</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-yargs-module/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to use the Yargs Module in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
@@ -107,7 +107,7 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-validate-data-using-express-validator-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Validate Data using express-validator Module in Node.js ?</a>
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-validate-data-using-express-validator-module-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to Validate Data using express-validator Module in Node.js?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
@@ -115,7 +115,7 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://medium.com/@gouravhammad477/validation-in-node-js-using-the-express-validator-module-cd815ec082f1" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express-validator : Best validation module in node.js</a>
+                        <a target="__blank" href="https://medium.com/@gouravhammad477/validation-in-node-js-using-the-express-validator-module-cd815ec082f1" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express-validator: Best validation module in node.js</a>
                       </div>
 
                     </div>
@@ -129,7 +129,7 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
-                        <a target="__blank" href="https://youtu.be/n0JIyFIOzEE" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to send bulk SMS using Twilio Notify</a>
+                        <a target="__blank" href="https://youtu.be/n0JIyFIOzEE" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to send bulk SMS using Twilio Notify?</a>
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
