--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -230,7 +230,7 @@
             <h3 class="mb-0">India Stop Corona</h3>
             <div>Website URL :&nbsp; <a target="__blank" href="https://corona.olecons.com/">https://corona.olecons.com/</a></div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/EeG7Ok6t9gU">https://youtu.be/EeG7Ok6t9gU</a></div>
-            <p class="text-justify">It help people to keep themselves updated with corona related stats of India as well as world. It it a plaform where people can give help or take some help like grocery contacts, medical contacts, etc. It provide all necessary contacts of different locations.</p>
+            <p class="text-justify">It helps people to keep themselves updated with corona related stats of India as well as the world. It is a platform where people can give help or take some help like grocery contacts, medical contacts, etc. It provides all necessary contacts of different locations.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Mar 2020</span>
@@ -252,7 +252,7 @@
             <h3 class="mb-0">Crafty Gourav</h3>
             <div>Website URL :&nbsp; <a target="__blank" href="https://craftygourav.herokuapp.com/">https://craftygourav.herokuapp.com/</a></div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/WXAsuYaTIq0">https://youtu.be/WXAsuYaTIq0</a></div>
-            <p class="text-justify">This is an e-commerce website made using Node.js, Express.js and SQL. It is used for selling my own handmade products for running my own Art & Craft bussiness.</p>
+            <p class="text-justify">This is an e-commerce website made using Node.js, Express.js, and SQL. It is used for selling my handmade products for running my own Art & Craft business.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2019</span>
@@ -276,7 +276,7 @@
             <h3 class="mb-0">Task Manager</h3>
             <div>Website URL :&nbsp; <a target="__blank" href="https://gouravhammad-task-manager-app.herokuapp.com/">https://gouravhammad-task-manager-app.herokuapp.com/</a></div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/Zeogq8fWVlY">https://youtu.be/Zeogq8fWVlY</a></div>
-            <p class="text-justify">This is a task manager website made using Node.js and Express.js. This website allows users to manage their tasks. Here users can add tasks, delete tasks, update tasks and manage their all tasks easily.</p>
+            <p class="text-justify">This is a task manager website made using Node.js and Express.js. This website allows users to manage their tasks. Here users can add tasks, delete tasks, update tasks and manage all tasks easily.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jul 2019</span>
@@ -298,10 +298,10 @@
 
             <div class="subheading mt-1 text-dark font-weight-bold">Notes Manager</div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/rXZQ1Ao0zsY">https://youtu.be/rXZQ1Ao0zsY</a></div>
-            <p class="text-justify">This is a Node.js application for managing notes. Using command line arguments, users can add, delete, read and list notes.</p>
+            <p class="text-justify">This is a Node.js application for managing notes. Using command-line arguments, users can add, delete, read, and list notes.</p>
 
             <div class="subheading mt-1 text-dark font-weight-bold">Transportdeals</div>
-            <p class="text-justify">This is an Transport deals website made using java framework like Spring and Hibernate. Using this website, customers can book their deals and transporter can post their deals.</p>
+            <p class="text-justify">This is a Transport deals website made using java frameworks like Spring and Hibernate. Using this website, customers can book their deals, and transporter can post their deals.</p>
 
             <div class="subheading mt-1 text-dark font-weight-bold">E-commerce Application</div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/jxRunp_Ds4Y">https://youtu.be/jxRunp_Ds4Y</a></div>
@@ -401,17 +401,17 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="https://www.techgig.com/hackathon/here-campus">1<sup>st</sup> position in Discovery Challenge an coding contest</a> - Scaler Academy
+            <a target="__blank" href="https://www.techgig.com/hackathon/here-campus">1<sup>st</sup> position in Discovery Challenge a coding contest</a> - Scaler Academy
           </li>
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="#"> 1<sup>st</sup> position in inter college Website-App Presentation competition at Frequency 2020 </a> - SDBCT, Indore
+            <a target="__blank" href="#"> 1<sup>st</sup> position in inter-college Website-App Presentation competition at Frequency 2020 </a> - SDBCT, Indore
           </li>
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="https://www.facebook.com/urjotsav/photos/pcb.1365832830267992/1365831856934756/?type=3&theater"> 1<sup>st</sup> position in inter college Website and Mobile App Design competition at Urjotsav 2020</a> - PIEMR, Indore
+            <a target="__blank" href="https://www.facebook.com/urjotsav/photos/pcb.1365832830267992/1365831856934756/?type=3&theater"> 1<sup>st</sup> position in inter-college Website and Mobile App Design competition at Urjotsav 2020</a> - PIEMR, Indore
           </li>
 
           <li>
