--- a/views/Gallery.ejs
+++ b/views/Gallery.ejs
@@ -37,8 +37,12 @@
                       <div class="col-lg-6 col-md-6 col-12">
                         <a href="#" class="d-block mb-4 h-100">
                               <img class="img-fluid img-thumbnail" src="/gallery/2.jpg" alt="">
-                            </a>
+                          </a>
                       </div>
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a href="#" class="d-block mb-4 h-100">
+                              <img class="img-fluid img-thumbnail" src="/gallery/3.jpg" alt="">
+                          </a>
                       </div>
                       <div class="col-lg-6 col-md-6 col-12">
                         <a href="#" class="d-block mb-4 h-100">
@@ -65,6 +69,7 @@
                               <img class="img-fluid img-thumbnail" src="/gallery/8.jpg" alt="">
                             </a>
                       </div>
+
                     </div>
                   
                   </div>
