--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -92,11 +92,20 @@
           <a target="__blank" href="https://github.com/gouravhammad">
             <i class="fab fa-github"></i>
           </a>
+          <a target="__blank" href="https://medium.com/@gouravhammad477">
+            <i class="fab fa-medium"></i>
+          </a>
           <a target="__blank" href="https://twitter.com/GouravHammad">
             <i class="fab fa-twitter"></i>
           </a>
           <a target="__blank" href="https://www.youtube.com/channel/UCbLiJz8Td-XTjIt-7wxnNpw">
             <i class="fab fa-youtube"></i>
+          </a>
+          <a target="__blank" href="https://www.facebook.com/gouravhammad477/">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a target="__blank" href="https://www.instagram.com/gouravhammad/">
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </div>
@@ -329,7 +338,7 @@
           </li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            <a target="__blank" href="https://certificate.iitbombayx.in/downloads/4bf4b835993e49aba1bc5a3f9f70a37f/Certificate.pdf">CS101.1x: Programming Basics</a> - IITBombayX
+            <a target="__blank" href="https://certificate.iitbombayx.in/downloads/4bf4b835993e49aba1bc5a3f9f70a37f/Certificate.pdf">Programming Basics</a> - IITBombayX
           </li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
@@ -355,6 +364,18 @@
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
             <a target="__blank" href="#">Pro Java Certificate</a> - SSI
+          </li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            <a target="__blank" href="#">Software Engineering virtual internship</a> - JPMorgan Chase
+          </li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            <a target="__blank" href="#">Technology Consultant virtual internship</a> - Deloitte
+          </li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            <a target="__blank" href="#">NCC 'A' Grade Certificate</a> - Army Public School, Mhow
           </li>
 
         </ul>
@@ -396,7 +417,17 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="https://www.geeksforgeeks.org/the-technical-scripter-event-by-geeksforgeeks-2/">Secured among the Top 50 position in The Technical Scripter Event </a> - GeeksforGeeks
+            <a target="__blank" href="https://www.linkedin.com/posts/gouravhammad_mjfcode19-covid19-hackathon-activity-6664455636274819073-B8ot/">Secured amongst the Top 250 entries in #MJFCODE19 Hackathon</a> - HackerEarth
+          </li>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="#">Internal Hackathon winner in Smart India Hackathon</a> - SDBCT, Indore
+          </li>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a target="__blank" href="https://www.geeksforgeeks.org/the-technical-scripter-event-by-geeksforgeeks-2/">Secured among the Top 50 position in the Technical Scripter event</a> - GeeksforGeeks
           </li>
 
           <li>
@@ -406,7 +437,7 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="#"> 1<sup>st</sup> position in inter-college Website-App Presentation competition at Frequency 2020 </a> - SDBCT, Indore
+            <a  href="#"> 1<sup>st</sup> position in inter-college Website-App Presentation competition at Frequency 2020</a> - SDBCT, Indore
           </li>
 
           <li>
@@ -416,19 +447,19 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="https://www.hackerearth.com/@gouravhammad">1231<sup>th</sup> Global rank</a> - HackerEarth
+            <a target="__blank" href="https://www.hackerearth.com/@gouravhammad">1231<sup>th</sup> Global Rank on HackerEarth platform</a> - HackerEarth
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="https://www.codechef.com/users/gouravhammad">3 Star Rating</a> - CodeChef
+            <a target="__blank" href="https://www.codechef.com/users/gouravhammad">Secured 1675 rating (3 Stars) on CodeChef</a> - CodeChef
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a target="__blank" href="#">1<sup>st</sup> position in National Level Drawing & Painting Competition</a> - Army Public School, Mhow
+            <a  href="#">1<sup>st</sup> position in National Level Drawing & Painting Competition</a> - Army Public School, Mhow
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="#">Best NCC Cadet Award</a> - Army Public School, Mhow
+            <a href="#">Best NCC Cadet Award at 1 MP AIR SQN NCC, Indore</a> - Army Public School, Mhow
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
