--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -258,6 +258,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
+            <h3 class="mb-0">iWaivers</h3>
+            <div>Website URL :&nbsp; <a target="__blank" href="http://iwaivers.com/">http://iwaivers.com/</a></div>
+            <p class="text-justify">This project is made using Sail.js, Node.js, MongoDB, and AngularJS. iWaivers is a platform for signing digital waivers with your device. It gives you the ability to sign documents and waivers electronically in a well-managed way. iWaivers will help your business grow, by giving you a platform where you can easily manage your waivers and their collections, and it gives you the ability to email and SMS your customers.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Feb 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
             <h3 class="mb-0">Crafty Gourav</h3>
             <div>Website URL :&nbsp; <a target="__blank" href="https://craftygourav.herokuapp.com/">https://craftygourav.herokuapp.com/</a></div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/WXAsuYaTIq0">https://youtu.be/WXAsuYaTIq0</a></div>
@@ -265,6 +276,17 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
+            <h3 class="mb-0">Fauna Nation</h3>
+            <div>Website URL :&nbsp; <a target="__blank" href="https://faunanation.org/blog/">https://faunanation.org/blog/</a></div>
+            <p class="text-justify">Fauna Nation is a "Build For Digital India" initiative to care, enrich, and enhance the current scenario of Flora and Fauna. This is a project build under The Design Institute (TDI) where I with my team worked on the project for 3 months of time span.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2019</span>
           </div>
         </div>
 
@@ -311,6 +333,9 @@
 
             <div class="subheading mt-1 text-dark font-weight-bold">Transportdeals</div>
             <p class="text-justify">This is a Transport deals website made using java frameworks like Spring and Hibernate. Using this website, customers can book their deals, and transporter can post their deals.</p>
+
+            <div class="subheading mt-1 text-dark font-weight-bold">Water Delivery App</div>
+            <p class="text-justify">It is made using Node.js, Express.js and SQL. This is a water delivery application which is a website for selling water related product like domestic water, tankers supply, etc.</p>
 
             <div class="subheading mt-1 text-dark font-weight-bold">E-commerce Application</div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/jxRunp_Ds4Y">https://youtu.be/jxRunp_Ds4Y</a></div>
