--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -111,6 +111,51 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-updatemany-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | updateMany() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findoneanddelete-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findOneAndDelete() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findbyidandremove-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findByIdAndRemove() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-deletemany-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | deleteMany() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findbyidanddelete-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findByIdAndDelete() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findbyidandupdate-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findByIdAndUpdate() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findbyid-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findById() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-insertmany-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | insertMany() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-find-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | find() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findone-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findOne() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findoneandremove-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findOneAndRemove() Function</a>
+                      </div>
+
+
+                      <div class="col-lg-6 col-md-6 col-12">
                         <a target="__blank" href="https://medium.com/@gouravhammad477/python-program-to-find-nearest-greater-palindrome-number-8b618a0941e5" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Python program to find nearest greater palindrome number</a>
                       </div>
 
