--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -68,7 +68,7 @@
           <a class="nav-link js-scroll-trigger" href="gallery">My Art Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="blog">My Blogs</a>
+          <a class="nav-link js-scroll-trigger" href="blog">My Publications</a>
         </li>
       </ul>
     </div>
@@ -181,9 +181,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
+            <h3 class="mb-0">Technical Content Reviewer</h3>
+            <div class="subheading mb-3">Geeksforgeeks</div>
+            <p class="text-justify">I am a Content Reviewer Intern at GeeksforGeeks. We are tasked to review the content articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 100+ articles with codes.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
             <h3 class="mb-0">Technical Content Writer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">I am a Content Writer Intern at GeeksforGeeks. I am responsible for writing new articles and improving any existing articles if needed.</p>
+            <p class="text-justify">I am a Content Writer Intern at GeeksforGeeks. I am responsible for writing new articles and improving any existing articles if needed. I have published 90+ articles.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Apr 2020 - Present</span>
@@ -237,7 +248,6 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
             <h3 class="mb-0">India Stop Corona</h3>
-            <div>Website URL :&nbsp; <a target="__blank" href="https://corona.olecons.com/">https://corona.olecons.com/</a></div>
             <div class="mb-3">Demo Video &nbsp; :&nbsp; <a target="__blank" href="https://youtu.be/EeG7Ok6t9gU">https://youtu.be/EeG7Ok6t9gU</a></div>
             <p class="text-justify">It helps people to keep themselves updated with corona related stats of India as well as the world. It is a platform where people can give help or take some help like grocery contacts, medical contacts, etc. It provides all necessary contacts of different locations.</p>
           </div>
@@ -448,6 +458,11 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="#">Internal Hackathon winner in Smart India Hackathon</a> - SDBCT, Indore
+          </li>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a target="__blank" href="https://auth.geeksforgeeks.org/user/gouravhammad/profile">Campus Mantri (Campus Ambassador) of SD Bansal College for the session 2020-21</a> - GeeksforGeeks
           </li>
 
           <li>
